<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/gp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/book_a_ride"
            android:icon="@drawable/bookmy"
            android:title="@string/book_a_ride" />
    </group>

    <group
        android:id="@+id/gp8"
        android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/myride"
            android:title="@string/profile" />
    </group>

    <group
        android:id="@+id/gp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/rides"
            android:icon="@drawable/myride"
            android:title="@string/my_rides" />
    </group>

    <group
        android:id="@+id/gp3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/rate_card"
            android:icon="@drawable/rate"
            android:title="@string/rate_card1" />
    </group>

    <group
        android:id="@+id/gp9"
        android:checkableBehavior="single">
        <item
            android:id="@+id/credit_card"
            android:icon="@drawable/rate"
            android:title="@string/credit_card" />
    </group>

    <group
        android:id="@+id/gp4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/report_issue"
            android:icon="@drawable/report"
            android:title="@string/report_issue" />
    </group>

    <group
        android:id="@+id/gp5"
        android:checkableBehavior="single">
        <item
            android:id="@+id/call_support"
            android:icon="@drawable/call"
            android:title="@string/call_support" />
    </group>

    <group
        android:id="@+id/gp6"
        android:checkableBehavior="single">
        <item
            android:id="@+id/t_c"
            android:icon="@drawable/info"
            android:title="@string/tc" />
    </group>

    <group
        android:id="@+id/gp7"
        android:checkableBehavior="single">
        <item
            android:id="@+id/about"
            android:icon="@drawable/info"
            android:title="@string/about" />
    </group>
</menu>
