<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CouponActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/muted_black"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_back_coupons"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/COUPON_ACTIVITY__apply_coupon"
                android:textColor="@color/pure_white"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#333333" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#333333"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/editTextcc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:gravity="center"
                        android:hint="@string/COUPON_ACTIVITY__enter_coupon_code"
                        android:textColor="@color/pure_white"
                        android:textSize="15dp" />

                </LinearLayout>


                <TextView
                    android:id="@+id/tv_coupon_invalid"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/COUPON_ACTIVITY__invalid_code"
                    android:textColor="#c0392b"
                    android:textSize="15dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_coupon_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/COUPON_ACTIVITY__enter_code_again"
                    android:textColor="@color/muted_black"
                    android:textSize="14dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_coupon_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/COUPON_ACTIVITY__code_not_available"
                    android:textColor="@color/pure_white"
                    android:textSize="13dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bbbbbb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/pure_white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#494949">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/COUPON_ACTIVITY__cancel"
                android:textColor="@color/pure_white"
                android:textSize="15dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_apply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/COUPON_ACTIVITY__apply"
                android:textColor="@color/muted_black"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>