<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        android:background="#ffffff">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/car"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/INTRO_FOR_RENTAL_PACKAGE__rentals"
            android:textColor="@color/muted_black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/muted_black"
            android:gravity="center"
            android:text="Mini , Prime , Sedan, Luxury and other categories"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/muted_black"
            android:text="@string/INTRO_FOR_RENTAL_PACKAGE__now_rent_cab_from_your_apporio_taxi_app_for_local_tours_choose_an_hourly_package_and_travel_all_day"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/INTRO_FOR_RENTAL_PACKAGE__car_models_are_city_specific"/>


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ProgressBar
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/progress_bar"/>
            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:id="@+id/book_btn"
                    android:background="@color/colorPrimary">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/INTRO_FOR_RENTAL_PACKAGE__book_your_rental"
                        android:textSize="10dp"
                        android:id="@+id/booking_text"
                        android:textColor="#ffffff"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </FrameLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
