<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".accounts.ChangePasswordActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:orientation="horizontal"
        android:gravity="center|left"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="49dp"
            android:layout_height="49dp"
            android:gravity="center">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_left_sort"
                android:tint="@color/pure_white"/>



        </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center|left"
            android:textSize="18dp"
            android:textColor="@color/pure_white"
            android:text="@string/CHANGE_PASSWORD_ACTIVITY__reset_your_password"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center|left"
        android:padding="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CHANGE_PASSWORD_ACTIVITY__new_password"
            android:layout_marginBottom="5dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background= "@drawable/password_layout"
            android:hint="Enter Password"
            android:paddingLeft="10dp"
            android:textSize="15dp"
            android:id="@+id/new_password_edt"/>
    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center|left"
        android:padding="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CHANGE_PASSWORD_ACTIVITY__confirm_password"
            android:layout_marginBottom="5dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background= "@drawable/password_layout"
            android:hint="Confirm password"
            android:paddingLeft="10dp"
            android:textSize="15dp"
            android:id="@+id/confirm_password_edt"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center|right">

        <TextView
            android:layout_width="150dp"
            android:layout_height="49dp"
            android:background="@color/colorPrimary"
            android:layout_marginRight="20dp"
            android:id="@+id/change_password"
            android:text="@string/CHANGE_PASSWORD_ACTIVITY__change_password"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="@color/pure_white"/>

    </LinearLayout>


</LinearLayout>
