<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#b5000000">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/pure_white"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_green_tick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/TRIAL_RIDE_LATER_DIALOG_ACTIVITY__ride_scheduled"
                android:textColor="@color/pure_black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/TRIAL_RIDE_LATER_DIALOG_ACTIVITY__your_ride_has_been_scedule_driver_details_will_be_shared_15_min_before_your_pickup_time" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/ok_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/TRIAL_RIDE_LATER_DIALOG_ACTIVITY__ok"
                android:textSize="20dp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>




</LinearLayout>